# metareader

./: CITATION.cff  README.md  __init__.py  multi.py  py.typed  pyproject.toml  runner.py
metareader/: __init__.py  core.py
