[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metareader"
version = "0.3.0"
description = "Fast, flexible metadata reader for Excel/CSV/Parquet (ID-indexed, column-cached, snapshot-on-lock)."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [{name = "Your Name"}]
keywords = ["excel", "csv", "parquet", "metadata", "pandas"]

dependencies = [
  "pandas>=1.2",
  "numpy>=1.20",
  "openpyxl>=3.1.0"
]

[project.optional-dependencies]
fuzzy = ["rapidfuzz>=3.0"]
parquet = ["pyarrow>=14"]

[project.urls]
Homepage = "https://github.com/yourname/metareader"
Repository = "https://github.com/yourname/metareader"

[tool.setuptools]
packages = ["metareader"]
include-package-data = true

[tool.setuptools.package-data]
metareader = ["py.typed"]
